# poke-cli

./: .dccache  .dockerignore  .gitignore  .gitleaksignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  REFACTORING.md  Taskfile.yml  cli.go  cli_test.go  codecov.yml  data_transfer.py  demo.tape  gitleaks.json  gitleaks.toml  go.mod  go.sum  lychee.toml  mkdocs.yml  nfpm.yaml  qodana.yaml
card_data/: README.md  dagster.yaml  pyproject.toml  tcg_pricing.py
card_data/infrastructure/: dagster.service  start-dagster.sh  wait-for-rds.sh
card_data/infrastructure/aws/ec2/: outputs.tf  provider.tf
card_data/infrastructure/aws/rds/: db_instance.tf  db_subnet_group.tf  outputs.tf  provider.tf  variables.tf
card_data/infrastructure/aws/vpc/: .terraform.lock.hcl  outputs.tf  provider.tf
card_data/pipelines/: definitions.py  sensors.py
card_data/pipelines/defs/: competitive.py
card_data/pipelines/defs/extract/: extract_data.py  extract_pricing_data.py  testing.py
card_data/pipelines/defs/extract/limitless/: extract_standings.py
card_data/pipelines/defs/extract/pokedata/: extract_events.py  extract_tournaments.py
card_data/pipelines/defs/extract/tcgcsv/: extract_pricing.py
card_data/pipelines/defs/extract/tcgdex/: extract_cards.py  extract_series.py  extract_sets.py
card_data/pipelines/defs/load/: load_data.py  load_pricing_data.py
card_data/pipelines/defs/load/pokedata/: load_events.py  load_tournaments.py
card_data/pipelines/defs/load/tcgcsv/: load_pricing.py
card_data/pipelines/defs/load/tcgdex/: load_cards.py  load_series.py  load_sets.py
card_data/pipelines/defs/pokeapi/: pokemon.py  pokemon_stats.py  pokemon_types.py  stats.py  types.py
card_data/pipelines/defs/transform/: transform_data.py
card_data/pipelines/defs/transformation/: transform_data.py
card_data/pipelines/poke_cli_dbt/: dbt_project.yml
card_data/pipelines/poke_cli_dbt/macros/: create_relationships.sql  create_rls.sql  create_view.sql  resolve_pokemon_id.sql
card_data/pipelines/poke_cli_dbt/models/: cards.sql  champions_speed_tiers.sql  comp_events.sql  comp_players.sql  comp_rounds.sql  comp_tcg_decklists.sql  comp_tcg_tournaments.sql  comp_vg_decklists.sql  comp_vg_tournaments.sql  pikalytics_pokemon_comp_info.sql  pikalytics_speed_tiers.sql  pokemon.sql  pricing_data.sql  sets.sql  sources.yml  standings.sql  vg_pokemon_stats.sql  vg_pokemon_types.sql  vg_stats.sql  vg_types.sql
card_data/pipelines/soda/: checks.yml  checks_comp_events.yml  checks_comp_players.yml  checks_comp_rounds.yml  checks_comp_tcg_tournaments.yml  checks_comp_vg_tournaments.yml  checks_pricing.yml  checks_series.yml  checks_sets.yml  configuration.yml
card_data/pipelines/tests/: extract_pricing_test.py  extract_series_test.py  extract_sets_test.py  json_retriever_test.py  secret_retriever_test.py  sensors_test.py
card_data/pipelines/utils/: json_retriever.py  secret_retriever.py
cmd/: ability.go  ability_test.go  move.go  natures.go  natures_test.go  pokemon.go  pokemon_test.go  styles.go  styles_test.go  types.go  types_test.go  validate.go  validate_test.go  validateargs.go  validateargs_test.go
connections/: berry_db.go  berry_db_test.go  (+4 more)
services/: Cargo.toml  README.md
services/src/: aggregate.rs  api.rs  cache.rs  domain.rs  lib.rs
services/tests/fixtures/: charizard-species.json  charizard.json  type-fire.json  type-flying.json
web/: Dockerfile  analytics.py  app.py  app_test.py  pyproject.toml
web/.streamlit/: config.toml
(+311 files in other folders)
