[project]
name = "card-data"
version = "1.5.2"
description = "File directory to store all data related processes for the Pokémon TCG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-secretsmanager-caching>=1.1.3",
    "dagster>=1.11.3",
    "dagster-dg-cli>=1.11.3",
    "dagster-postgres>=0.27.3",
    "dagster-webserver>=1.11.3",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "soda-core-postgres>=3.5.5",
    "sqlalchemy>=2.0.41",
    "termcolor>=3.1.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-postgres>=0.27.3",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipelines"
registry_modules = [
    "pipelines.components.*",
]
